--- a/challenge4.html
+++ b/challenge4.html
@@ -74,11 +74,11 @@ function unDo() {
     <!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
     <img class="preview" tabindex="3" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon3.jpg" alt="Young Puppy" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
 
-    <img class="preview" tabindex="3" src="Iris3" alt="My Dog Iris" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
+    <img class="preview" tabindex="4" src="Iris1.jpg" alt="My Dog Iris" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
 
-    <img class="preview" tabindex="3" src="Iris2.jpg" alt="Iris and Louis" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
+    <img class="preview" tabindex="5" src="Iris2.jpg" alt="Iris and Louis" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
 
-    <img class="preview" tabindex="3" src="Iris3.jpg" alt="Iris and Louis Again" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
+    <img class="preview" tabindex="6" src="Iris3.jpg" alt="Iris and Louis Again" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
 
 </body>
 
