--- a/challenge4.html
+++ b/challenge4.html
@@ -66,13 +66,13 @@ function unDo() {
         Hover or tab over/into an image below.
     </div>
     <!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
-    <img class="preview" tabindex="1" alt="Styling with a Bandana" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon.jpg" onmouseover = "upDate(this)" onfocus = "upDate(this)" onblur="unDo()" onmouseleave = "unDo()">
+    <img class="preview" tabindex="1" alt="Sleepy Iris" src="Iris4.jpg" onmouseover = "upDate(this)" onfocus = "upDate(this)" onblur="unDo()" onmouseleave = "unDo()">
 
     <!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
-    <img class="preview" tabindex="2" alt="With My Boy" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon2.JPG" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
+    <img class="preview" tabindex="2" alt="Iris Loves Catch" src="Iris5.jpg" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
 
     <!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
-    <img class="preview" tabindex="3" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon3.jpg" alt="Young Puppy" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
+    <img class="preview" tabindex="3" src="Iris6.jpg" alt="Iris Loves Sticks" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
 
     <img class="preview" tabindex="4" src="Iris1.jpg" alt="My Dog Iris" onmouseover = "upDate(this)" onmouseleave = "unDo()" onfocus = "upDate(this)" onblur="unDo()">
 
